2002-12-27  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp:  Added doc-comments.

        * src/openvrml/OpenVRML/browser.cpp:  Use newer form of
          UnsupportedInterface constructor.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Changed
          AbstractLight::renderScoped to take a Viewer & instead of a
          Viewer *.

        * src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h:
          Made NodeVisitor destructor non-throwing.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Added GroupingNode
          abstract node type.

        * src/openvrml/OpenVRML/node.h:  Removed obsolete FontFace class
          declaration.

2002-12-26  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/node.h:  Made Node::visited private.

        * src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h:
          Moved NodePath typedef from Node class to OpenVRML namespace;
          use a std::deque instead of a std::list.

        * src/openvrml/OpenVRML/node.h:  Removed relocate stuff
          (prematurely checked in by accident).

        * src/openvrml/OpenVRML/node.cpp: Added doc-comment for
          Node::getScope.

        * src/openvrml/OpenVRML/node.cpp:  Added doc-comments.

        * src/openvrml/OpenVRML/vrml97node.cpp:  Prefer std::distance to
          pointer/iterator arithmetic.

2002-12-23  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp:  Use newer
          UnsupportedInterface constructor.

2002-12-21  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4:  Only use $x_includes and $x_libraries if those
          variables have been set.

        * README, configure.ac, doc/Doxyfile:  Updated version number to